Addition of balloon image
Added balloon image as fourth option

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 		</article>
 		<article class="container">
 		 <div class="overlay">
-			 <div class="text">for Glen Rodgers?</div>
+			 <div class="text">for kid-friendly fun?</div>
 		 </div>
 		 <div class="image">
-			 <img src="LFimages\Glen.jpg">
+			 <img src="LFimages\Balloon.png">
 		 </div>
 	 </article>
 	 <article class="container">
 		<div class="overlay">
-			<div class="text">for some fun?</div>
+			<div class="text">for a social night?</div>
 		</div>
 		<div class="image">
 			<img src="LFimages\fun.png">
