Fixed scroll bug added image banner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
 		</div>
 		<hr />
 
+
+
 <body>
+	<div>
+		<div class="textfloat">
+			<div class="centered">Less time choosing, more time munching:</br> Find the restaurant you're craving </div>
+			<img src="LFimages\restaurant.jpg">
+		</div>
+
+	</div>
+
+
+
+
+
+
+
 		<div class="grid-container">
 		  <article class="container">
 				<div class="overlay">
