Still no about page
Trying to get the pop up icon to work but struggling to do a multiple field form

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="grid-container">
 		  <article class="container">
 				<div class="overlay">
-					<div class="text">for romantic ambience?</div>
+					<div class="text">...romantic ambience?</div>
 				</div>
 				<div class="image">
 					<img src="LFimages\rom.png">
@@ -51,7 +51,7 @@
 
 			<article class="container">
 			 <div class="overlay">
-				 <div class="text">for kid-friendly fun?</div>
+				 <div class="text">...kid-friendly fun?</div>
 			 </div>
 			 <div class="image">
 				 <img src="LFimages\Balloon.png">
@@ -60,7 +60,7 @@
 
 		 <article class="container">
 			<div class="overlay">
-				<div class="text">for a social night?</div>
+				<div class="text">...a social night?</div>
 			</div>
 			<div class="image">
 				<img src="LFimages\fun.png">
@@ -69,7 +69,7 @@
 
 		<article class="container">
 			 <div class="overlay">
-				 <div class="text">for drinks?</div>
+				 <div class="text">...drinks?</div>
 			 </div>
 			 <div class="image">
 				 <img src="LFimages\drinks.png">
@@ -128,7 +128,7 @@
 		      <img src="LFimages/Map.PNG" style="width:100%">
 		    </div>
 		    <div class="column">
-		      <form action="/action_page.php">
+		      <form onsubmit="confirmInput" action="/action_page.php">
 		        <label for="fname">First Name</label>
 		        <input type="text" id="fname" name="firstname" placeholder="Your name..">
 		        <label for="lname">Last Name</label>
@@ -136,8 +136,11 @@
 		        <label for="subject">Subject</label>
 		        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
 		        <input type="submit" value="Submit">
-		      </form>
-		    </div>
+						<form onsubmit="confirmInput()"</form>
+						<script alert("Thank you" + fname + "We can't wait to help you find what you're 'Looking For' and will get back to you as soon as possible"</script>
+</head>
+<body>
+							    </div>
 		  </div>
 		</div>
 
