--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thumbnail Grid with Expanding Preview</title>
-    <link rel="stylesheet" type="text/css" href="lfcss/index.css" />
+    <link rel="stylesheet" type="text/css" href="lfcss/about.css" />
     <script src="LFJava.js"></script>
 </head>
 
@@ -14,47 +15,39 @@
     <!- ------------------------------------------------------------ ->
     <div class="header">
         <h1 class="logo"><a class="header-link" href="/">Looking For...</a></h1>
-        <h2 class="about"><a class="header-link" href="/about.html">about</a></h2>
+        <h2 class="about"><a class="header-link" href="/about">about</a></h2>
     </div>
 
     <!- The Hero image ->
     <!- ------------------------------------------------------------ ->
     <div>
         <div class="centered">
-            <h1 class="hero-h1">Less time choosing, more time munching:</h1>
-            <h2 class="hero-h2">Find the restaurant you're craving</h2>
+            <h1 class="hero-h1">About Us</h1>
+            <h2 class="hero-h2">And how we help finding the restaurant you're craving</h2>
         </div> 
         <img class="hero-image" src="LFimages\restaurant.jpg"></img> 
     </div>
-<!- The Two-fold Text Section ->
+<!- Text Section ->
     <!- ------------------------------------------------------------ ->
-
-    <!- Left Section ->
-        <!- ------------------------------------------------------------ ->
     <div class="text-container">
-        <div class="container-left">Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Quisque sed velit non arcu molestie consequat at
-            quis odio. Morbi sit amet blandit dolor. Vestibulum lacus ipsum,
-        imperdiet eget ante vel, aliquet hendrerit dui. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-    Nullam viverra nibh eget nibh pharetra gravida. Suspendisse id eros sed
-    augue finibus fringilla eu ac urna. Donec maximus tellus auctor quam
-imperdiet, vitae sagittis felis pellentesque. Curabitur condimentum accumsan
-lorem, non iaculis dolor.
-        </div>
-
-        <!- Right Section ->
-        <!- ------------------------------------------------------------ ->
-        <div class="container-right">Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Quisque sed velit non arcu molestie consequat at
-            quis odio. Morbi sit amet blandit dolor. Vestibulum lacus ipsum,
-        imperdiet eget ante vel, aliquet hendrerit dui. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-    Nullam viverra nibh eget nibh pharetra gravida. Suspendisse id eros sed
-    augue finibus fringilla eu ac urna. Donec maximus tellus auctor quam
-imperdiet, vitae sagittis felis pellentesque. Curabitur condimentum accumsan
-lorem, non iaculis dolor.
-        </div>
+        <p class="text-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed
+        velit non arcu molestie consequat at quis odio. Morbi sit amet blandit
+        dolor. Vestibulum lacus ipsum, imperdiet eget ante vel, aliquet
+        hendrerit dui. Orci varius natoque penatibus et magnis dis parturient
+        montes, nascetur ridiculus mus.  Nullam viverra nibh eget nibh pharetra
+        gravida. Suspendisse id eros sed augue finibus fringilla eu ac urna.
+        Donec maximus tellus auctor quam imperdiet, vitae sagittis felis
+        pellentesque. Curabitur condimentum accumsan lorem, non iaculis dolor.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed
+        velit non arcu molestie consequat at quis odio. Morbi sit amet blandit
+        dolor. Vestibulum lacus ipsum, imperdiet eget ante vel, aliquet
+        hendrerit dui. Orci varius natoque penatibus et magnis dis parturient
+        montes, nascetur ridiculus mus.  Nullam viverra nibh eget nibh pharetra
+        gravida. Suspendisse id eros sed augue finibus fringilla eu ac urna.
+        Donec maximus tellus auctor quam imperdiet, vitae sagittis felis
+        pellentesque. Curabitur condimentum accumsan lorem, non iaculis dolor.
+        <p>
     </div>
 
     <!- Footer Section ->
