--- a/index.html
+++ b/index.html
@@ -11,32 +11,25 @@
 	</head>
 
 
-
-
-
-		<div class="header">
-			<h1> Looking For...</h1>
-			<div class="progress-container">
-    		<div class="progress-bar" id="myBar"></div>
-  		</div>
+	<div class="header">
+		<div class="navbar">
+	  	<a href="#home">Looking for...</a>
+	  	<a href="#news">About</a>
+	  </div>
+		<div class="progress-container">
+			<div class="progress-bar" id="myBar"></div>
 		</div>
-		<hr />
-
-
-
-<body>
-	<div>
-		<div class="textfloat">
-			<div class="centered">Less time choosing, more time munching:</br> Find the restaurant you're craving </div>
-			<img src="LFimages\restaurant.jpg">
-		</div>
-
 	</div>
 
 
 
-
-
+<body>
+		<div>
+			<div class="textfloat">
+				<div class="centered">Less time choosing, more time munching:</br> Find the restaurant you're craving </div>
+				<img src="LFimages\restaurant.jpg">
+			</div>
+		</div>
 
 
 		<div class="grid-container">
@@ -76,42 +69,6 @@
 			 </div>
 		 </article>
 
-		 <article class="container">
-				<div class="overlay">
-					<div class="text">Hello World</div>
-				</div>
-				<div class="image">
-					<img src="LFimages\1.jpg">
-				</div>
-			</article>
-
-			<article class="container">
-	 			<div class="overlay">
-	 				<div class="text">Hello World</div>
-	 			</div>
-	 			<div class="image">
-	 				<img src="LFimages\1.jpg">
-	 			</div>
-	 		</article>
-
-			<article class="container">
-	 			<div class="overlay">
-	 				<div class="text">Hello World</div>
-	 			</div>
-	 			<div class="image">
-	 				<img src="LFimages\2.jpg">
-	 			</div>
-	 		</article>
-
-			<article class="container">
-	 			<div class="overlay">
-	 				<div class="text">Hello World</div>
-	 			</div>
-	 			<div class="image">
-	 				<img src="LFimages\2.jpg">
-	 			</div>
-	 		</article>
-
 		</div>
 
 		<hr />
@@ -123,32 +80,41 @@
 		    <h2>Fancy a chat?</h2>
 		    <p>Swing by for a cup of coffee, or leave us a message:</p>
 		  </div>
+
+
+
 		  <div class="row">
 		    <div class="column">
-		      <img src="LFimages/Map.PNG" style="width:100%">
+					<div class="map-container">
+ 					<div style="width: 100%"><iframe width="100%" height="600" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Brainlabs%20London+(Looking%20For)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Create route map</a></iframe></div><br />
+ 		    </div>
 		    </div>
-		    <div class="column">
-		      <form onsubmit="confirmInput" action="/action_page.php">
-		        <label for="fname">First Name</label>
-		        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-		        <label for="lname">Last Name</label>
-		        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-		        <label for="subject">Subject</label>
-		        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-		        <input type="submit" value="Submit">
-						<form onsubmit="confirmInput()"</form>
-						<script alert("Thank you" + fname + "We can't wait to help you find what you're 'Looking For' and will get back to you as soon as possible"</script>
-</head>
-<body>
-							    </div>
+
+
+
+
+
+
+
+			    <div class="column">
+			      <form onsubmit="confirmInput" action="/action_page.php">
+			        <label for="fname">First Name</label>
+			        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+			        <label for="lname">Last Name</label>
+			        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+			        <label for="subject">Subject</label>
+			        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+			        <input type="submit" value="Submit">
+
+					</form>
+					</div>
+
 		  </div>
 		</div>
 
-	</body>
 
 
 
-	<footer>
 		<div class="footer-social-icons">
 		    <h4 class="_14">Follow us on</h4>
 		    <ul class="social-icons">
@@ -157,7 +123,7 @@
 		        <li><a href="https://www.instagram.com/?hl=en" class="social-icon"target="_blank"> <i class="fa fa-instagram"></i></a></li>
 		    </ul>
 		</div>
-	</footer>
+		</body>
 </html>
 
 <!-- https://webdesign.tutsplus.com/tutorials/create-a-css-grid-image-gallery-with-blur-effect-and-interaction-media-queries--cms-32287 -->
