--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<div class="header">
 		<div class="navbar">
-	  	<a href="#home">Looking for...</a>
-	  	<a href="#news">About</a>
+	  	<a >Looking for...</a>
+	  	<a href="about.html">About</a>
 	  </div>
 		<div class="progress-container">
 			<div class="progress-bar" id="myBar"></div>
@@ -86,8 +86,8 @@
 		  <div class="row">
 		    <div class="column">
 					<div class="map-container">
- 					<div style="width: 100%"><iframe width="100%" height="600" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Brainlabs%20London+(Looking%20For)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Create route map</a></iframe></div><br />
- 		    </div>
+ 						<div style="width: 100%"><iframe width="100%" height="600" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Brainlabs%20London+(Looking%20For)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Create route map</a></iframe></div><br />
+ 		    	</div>
 		    </div>
 
 
@@ -123,6 +123,7 @@
 		        <li><a href="https://www.instagram.com/?hl=en" class="social-icon"target="_blank"> <i class="fa fa-instagram"></i></a></li>
 		    </ul>
 		</div>
+		
 		</body>
 </html>
 
