--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div class="header">
 		<div class="navbar">
-	  	<a >Looking for...</a>
+	  	<a href="index.html">Looking for...</a>
 	  	<a href="about.html">About</a>
 	  </div>
 		<div class="progress-container">
@@ -123,7 +123,7 @@
 		        <li><a href="https://www.instagram.com/?hl=en" class="social-icon"target="_blank"> <i class="fa fa-instagram"></i></a></li>
 		    </ul>
 		</div>
-		
+
 		</body>
 </html>
 
